# RailWatch-12306

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  RailWatch_12306.spec  RailWatch_runtime.spec  SECURITY.md  anti_detect.py  chromedriver_manager.py  electron-builder.yml  gui_12306_0.py  index.html  package-lock.json  package-windows.cmd  package.bat  package.json  pyproject.toml  railwatch_alternate_flow.py  railwatch_bridge.py  railwatch_config_contract.py  railwatch_dates.py  railwatch_notify.py  railwatch_preferences.py  railwatch_row_parser.py  railwatch_runtime.py  railwatch_selectors.py  railwatch_state.py  railwatch_submit_flow.py  railwatch_system.py  railwatch_time.py  railwatch_ui.py  railwatch_verification.py  requirements.txt  t12306_gui_0.py  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  package-windows.yml
.superpowers/brainstorm/968-1780815621/content/: hybrid-confirmation-1.html  separate-pages-confirmation-1.html  visual-directions-1.html
.superpowers/brainstorm/968-1780815621/state/: server-info
docs/: RELEASE_CHECKLIST.md  release-qa.md
docs/superpowers/plans/: 2026-06-07-railwatch-desktop-ui-redesign.md  2026-06-08-railwatch-anti-detect-risk-control-fixes.md  2026-06-08-railwatch-frontend-backend-contract-fixes.md  2026-06-09-railwatch-frontend-backend-gaps-and-bugs.md
docs/superpowers/specs/: 2026-06-07-railwatch-desktop-ui-redesign-design.md  2026-06-09-railwatch-houbu-reliability-design.md
electron/: alertManager.ts  ipcSecurity.ts  main.ts  preload.ts  pythonRuntime.ts  tsconfig.json  updateChecker.ts  updateManager.ts
electron/__tests__/: ipcSecurity.test.ts  packageWindowsWorkflow.test.ts  packagingScript.test.ts  pythonRuntime.test.ts  updateChecker.test.ts  updateManager.test.ts  updatePublishingConfig.test.ts
src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
src/components/: DashboardPage.test.tsx  DashboardPage.tsx  DisplayPrimitives.test.tsx  DisplayPrimitives.tsx  EventPanel.test.tsx  EventPanel.tsx  FormPrimitives.test.tsx  FormPrimitives.tsx  MonitorPage.test.tsx  MonitorPage.tsx  SettingsPage.test.tsx  SettingsPage.tsx  Shell.test.tsx  Shell.tsx  TripSetupPage.test.tsx  TripSetupPage.tsx  UpdateStatusControl.test.tsx  UpdateStatusControl.tsx  componentTypes.ts
src/lib/: formatEventLog.test.ts  formatEventLog.ts  formatSystemStatus.test.ts  formatSystemStatus.ts  railwatchApi.ts  useAppUpdate.test.ts  useAppUpdate.ts
src/store/: railwatchStore.test.ts  railwatchStore.ts  useRailWatchStore.ts
src/test/: setupDom.ts
tests/: test_anti_detect.py  test_gui_logic.py  test_railwatch_bridge.py  test_railwatch_config_contract.py  test_railwatch_dates.py  test_railwatch_preferences.py  test_railwatch_runtime.py  test_railwatch_state.py  test_railwatch_system.py  test_railwatch_time.py
