[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "railwatch-12306"
version = "0.1.0"
description = "Python runtime and Selenium core for the RailWatch 12306 Electron desktop app."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "RailWatch 12306 contributors" },
]
keywords = ["12306", "railway", "monitor", "electron", "selenium"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Desktop Environment",
]
dependencies = [
  "requests>=2.28.0",
  "selenium>=4.0.0",
  "undetected-chromedriver>=3.5.0",
  "pyttsx3>=2.90",
  "pywin32>=300; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/railwatch/railwatch-12306"
Issues = "https://github.com/railwatch/railwatch-12306/issues"

[tool.setuptools]
py-modules = [
  "anti_detect",
  "chromedriver_manager",
  "gui_12306_0",
  "railwatch_bridge",
  "railwatch_preferences",
  "railwatch_runtime",
  "railwatch_state",
]
